--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,12 @@ deployments/
 
 # Ignores development broadcast logs
 !/broadcast
+/broadcast/*/80001/
 /broadcast/*/31337/
 /broadcast/**/dry-run/
+
+# Ignores Foundry deployment script
+scripts/
 
 # Dotenv file
 .env
