--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,20 +3,19 @@ name: Node.js Package
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
   publish-gpr:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 12
-          registry-url: https://npm.pkg.github.com/
-          scope: '@jasmine-energy'
+          node-version: '18.x'
+          registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          NODE_AUTH_TOKEN: ${{secrets.NPM_API_KEY}}
